# img

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/img/: Cargo.toml
crates/img-cli/: Cargo.toml
crates/img-cli/src/: io.rs  main.rs  printing.rs
crates/img-cli/src/cmd/: blur.rs  canny.rs  common.rs  crop.rs  gamma.rs  gamma_correction.rs  grayscale.rs  kuwahara.rs  mod.rs  negative.rs  resize.rs  sepia.rs
crates/img-cli/src/param/: channel_flags.rs  input.rs  mod.rs  output.rs  size.rs  size_offset.rs  threads.rs
crates/img/benches/: operations.rs
crates/img/benches/operation/: canny.rs  common.rs  crop.rs  gamma_correction.rs  gaussian_blur.rs  grayscale.rs  kuwahara.rs  mean_blur.rs  negative.rs  resize.rs  sepia.rs
crates/img/src/: error.rs  image.rs  io.rs  iter.rs  lib.rs  math.rs  pixel.rs  prelude.rs
crates/img/src/collection/: tracking_set.rs
crates/img/src/collections/: mod.rs
crates/img/src/component/: mod.rs
crates/img/src/component/kernel/: convolution.rs  gaussian.rs  identity.rs  mean.rs  mod.rs  sobel.rs
crates/img/src/component/lens/: border.rs
crates/img/src/component/primitive/: area.rs  limits.rs  margin.rs  mod.rs  offset.rs  point.rs  scale.rs  size.rs
crates/img/src/io/: jpeg.rs  mod.rs  png.rs
crates/img/src/lens/: border.rs  cloned.rs  image.rs  iter.rs  kernel.rs  map.rs  materialize.rs  mod.rs  overlay.rs  quick_split.rs  remap.rs  split.rs  swap.rs  value.rs
crates/img/src/lens/image/: colors.rs  mod.rs
crates/img/src/operation/: mod.rs
crates/img/src/operation/blur/: gaussian.rs  kuwahara.rs  mean.rs  median.rs  mod.rs
crates/img/src/operation/color/: gamma_correction.rs  grayscale.rs  mod.rs  negative.rs  sepia.rs
crates/img/src/operation/detection/edge/: canny.rs  mod.rs
crates/img/src/operation/geometry/: crop.rs  mod.rs  resize.rs
crates/img/src/ops/blur/: gaussian.rs  mean.rs  median.rs
crates/img/src/ops/color/: gamma_correction.rs  grayscale.rs  mod.rs  sepia.rs
crates/img/src/ops/geometry/: crop.rs  resize.rs
crates/img/src/pipe/: cloned.rs  colors.rs  image.rs  iter.rs  kernel.rs  map.rs  materialize.rs  mod.rs  remap.rs  swap.rs
crates/img/src/pipe/image/: colors.rs  mod.rs
crates/img/src/pixel/: hsv.rs  mod.rs
crates/img/src/primitive/: area.rs  margin.rs  mod.rs  offset.rs  point.rs  scale.rs  size.rs
crates/img/src/primitives/: buffer.rs  mod.rs  point.rs  scale.rs  size.rs
crates/img/src/view/: image.rs  kernel.rs  mod.rs
crates/img/tests/: lens_correctness.rs
src/: image.rs  io.rs  iter.rs  lib.rs  pixel.rs
src/ops/color/: grayscale.rs  sepia.rs
src/ops/geometry/: crop.rs  resize.rs
