[workspace]
resolver = "3"
members = ["crates/img", "crates/img-cli"]

[workspace.dependencies]
img = { path = "crates/img" }
anyhow = "1.0.98"
thiserror = "2.0.12"
clap = { version = "4.5.40", features=["cargo", "derive"] }
colored = "3.0.0"
png = "0.17.16"
itertools = { version = "0.14.0" }
bitflags = { version = "2.9.3" }
paste = { version = "1.0.15" }
criterion = { version = "0.5", features = ["html_reports"] }
num_cpus = { version = "1.17.0" }
