[package]
name = "img-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
img.workspace = true
colored.workspace = true
clap.workspace = true
anyhow.workspace = true
num_cpus = { workspace = true, optional = true }

[features]
default = ["parallel", "jpeg", "png"]
parallel = ["img/parallel", "dep:num_cpus"]
jpeg = ["img/jpeg"]
png = ["img/png"]
