[package]
name = "img"
version = "0.1.0"
edition = "2024"

[dependencies]
png.workspace = true
thiserror.workspace = true
itertools.workspace = true
bitflags.workspace = true
paste.workspace = true
num_cpus = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:num_cpus"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "operations"
harness = false
