[package]
name = "img"
version = "0.1.0"
edition = "2024"

[dependencies]
png.workspace = true
thiserror.workspace = true
rayon = { workspace = true, optional = true }
itertools.workspace = true
bitflags.workspace = true
paste.workspace = true

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "operations"
harness = false
