[package]
name = "img"
version = "0.1.0"
edition = "2024"

[dependencies]
png.workspace = true
thiserror.workspace = true
itertools.workspace = true
bitflags.workspace = true
paste.workspace = true
rand.workspace = true
turbojpeg.workspace = true

[features]
default = ["parallel"]
parallel = []

[dev-dependencies]
criterion.workspace = true
num_cpus.workspace = true

[lib]
bench = false

[[bench]]
name = "grayscale"
path = "benches/operation/grayscale.rs"
harness = false

[[bench]]
name = "sepia"
path = "benches/operation/sepia.rs"
harness = false

[[bench]]
name = "gamma_correction"
path = "benches/operation/gamma_correction.rs"
harness = false

[[bench]]
name = "mean_blur"
path = "benches/operation/mean_blur.rs"
harness = false

[[bench]]
name = "gaussian_blur"
path = "benches/operation/gaussian_blur.rs"
harness = false

[[bench]]
name = "crop"
path = "benches/operation/crop.rs"
harness = false

[[bench]]
name = "resize"
path = "benches/operation/resize.rs"
harness = false

[[bench]]
name = "canny"
path = "benches/operation/canny.rs"
harness = false

[[bench]]
name = "kuwahara"
path = "benches/operation/kuwahara.rs"
harness = false
